# kuppel

./: .gitignore  README.md  ROADMAP.md  eelseade1.json  pyproject.toml
.github/workflows/: ci.yml
configs/: base.json  icosahedron_full.json  testing_v3.json
docs/: USER_GUIDE.md
freecad_dome/: __init__.py  assembly.py  base_wall.py  cnc_export.py  costing.py  covering.py  door_opening.py  entry_porch.py  export.py  foundation.py  gui_dialog.py  icosahedron.py  joint_variants.py  loads.py  multi_dome.py  node_connectors.py  node_fit.py  panels.py  parameters.py  pipeline.py  production.py  riser_wall.py  skylight.py  spreadsheets.py  structural_check.py  struts.py  techdraw.py  tessellation.py  vec3.py  ventilation.py  weather.py
macros/: DebugTechDrawViews.FCMacro  GenerateDomeFromRepo.FCMacro  GenerateTechDrawRepresentativeParts.FCMacro  InspectStrutGeometry.FCMacro  JointVariantBatchExport.FCMacro  PreviewStrutBevelCuts.FCMacro  ShowStrutCutPlanes.FCMacro  ViewRotation.FCMacro.manifest  generate_dome.py
scripts/: check_node_inner_corner_spread.py  check_truncation_frame_parallel.py  compare_joint_variants.py  debug_techdraw_views.py  export_joint_variant_batch.py  export_panel_frame_cutplanes.py  fix_ifc_units_to_meters.py  freecad_check_frame_collisions.py  freecad_check_glass_alignment.py  freecad_check_icosa_frames.py  freecad_check_outputs.py  freecad_check_panel_frames.py  generate_dome.py  generate_techdraw.py  gui_joint_variant_batch.py  prototype_node_hub_points.py
tests/: conftest.py  test_geometry.py  test_integration.py
